# deadline-cloud-for-keyshot

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  depsBundle.sh  hatch.toml  pyproject.toml  requirements-testing.txt
.github/actions/bump_precommit_hook/: action.yml
.github/actions/prepush_release_hook/: action.yml
install_builder/: deadline-cloud-for-keyshot.xml
keyshot_script/: DeadlineCloudSubmitter.py  DealineCloudSubmitter.py  Submit to AWS Deadline Cloud.py
scripts/: _project.py  build_wheels.sh  create_adaptor_packaging_artifact.sh  deps_bundle.py
src/deadline/keyshot_adaptor/KeyShotAdaptor/: __init__.py  __main__.py  adaptor.py
src/deadline/keyshot_adaptor/KeyShotAdaptor/schemas/: init_data.schema.json
src/deadline/keyshot_adaptor/KeyShotClient/: __init__.py  keyshot_client.py  keyshot_handler.py
src/deadline/keyshot_submitter/: Submit to AWS Deadline Cloud.py  __init__.py  __main__.py  adaptor_keyshot_job_template.yaml  data_classes.py  default_keyshot_job_template.yaml  keyshot_render_submitter.py
src/deadline/keyshot_submitter/ui/components/: scene_settings_tab.py
test/: test_copyright_headers.py
test/deadline_submitter_for_keyshot/: __init__.py
test/deadline_submitter_for_keyshot/unit/: test_submitter.py
test/keyshot_submitter/: mock_lux.py  test_keyshot_submitter.py
